# Linear-Coding-Agent-Harness

./: .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  agent.py  autonomous_agent_demo.py  client.py  progress.py  prompts.py  pyproject.toml  requirements.txt  security.py  test_security.py  windows-compatibility-analysis.md
.agents/plans/completed/: windows-compatibility-fix.plan.md
.claude/agents/: coding.md  github.md  linear.md  slack.md
agents/: definitions.py
docs/architecture/: 01-system-context.md  02-container-architecture.md  03-component-architecture.md  04-agent-architecture.md  05-security-architecture.md  06-data-architecture.md  07-mcp-integration.md  README.md
docs/architecture/08-adr/: ADR-001-multi-agent-orchestration.md  ADR-002-defense-in-depth-security.md  ADR-003-arcade-mcp-gateway.md  ADR-004-context-passing.md  ADR-005-model-selection-strategy.md  README.md
prompts/: coding_agent_prompt.md  coding_prompt.md  github_agent_prompt.md  initializer_prompt.md  linear_agent_prompt.md  orchestrator_prompt.md  slack_agent_prompt.md
tests/: test_prompt_file_references.py
